# matrix-sae

./: .gitignore  LICENSE  README.md  REPRODUCE.md  pyproject.toml
core/: sae.py  split_utils.py  train.py  types.py
experiments/: run_batchtopk_downstream.py  run_collective_residual_analysis.py  run_deltanet_validation.py  run_downstream_sensitivity.py  run_gla_validation.py  run_khead_curve.py  run_mixed_position_downstream.py  run_rank_downstream.py  run_residual_correlation.py
experiments/ablations/: encoder_swap_ablation.py  layer_encoder_swap_ablation.py
experiments/analysis/: analyze.py  baselines.py  evaluate_downstream.py  memory_alignment.py
experiments/extraction/: extract_states.py
experiments/mamba2/: mamba2_write_geometry.py
experiments/steering/: generation_intervention.py  steering_boost_40.py
experiments/sweeps/: gdn_multihead_sweep.py  run_param_matched_control.py
